--- a/src/components/Expenses/Expenses.css
+++ b/src/components/Expenses/Expenses.css
@@ -1,6 +1,6 @@
 .expenses {
   padding: 1rem;
-  background-color: rgb(46, 188, 193);
+  background-color: rgba(81, 56, 20, 0.821);
   margin: 2rem auto;
   width: 50rem;
   max-width: 95%;
